tests/ui/try_transmute_mut-src-not-intobytes.nightly.stderr
error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> $DIR/try_transmute_mut-src-not-intobytes.rs:21:40
   |
21 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `IntoBytes` is not implemented for `Src`
  --> $DIR/try_transmute_mut-src-not-intobytes.rs:13:1
   |
13 | struct Src;
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `Src`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
             AtomicU32
             AtomicU64
             AtomicU8
             AtomicUsize
             Cell<T>
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             Isize<O>
             ManuallyDrop<T>
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
             NonZero<isize>
             NonZero<u128>
             NonZero<u16>
             NonZero<u32>
             NonZero<u64>
             NonZero<u8>
             NonZero<usize>
             Option<NonZero<i128>>
             Option<NonZero<i16>>
             Option<NonZero<i32>>
             Option<NonZero<i64>>
             Option<NonZero<i8>>
             Option<NonZero<isize>>
             Option<NonZero<u128>>
             Option<NonZero<u16>>
             Option<NonZero<u32>>
             Option<NonZero<u64>>
             Option<NonZero<u8>>
             Option<NonZero<usize>>
             PhantomData<T>
             ReadOnly<T>
             SliceDst<T, U>
             U128<O>
             U16<O>
             U32<O>
             U64<O>
             Unalign<T>
             UnsafeCell<T>
             Usize<O>
             Wrapping<T>
             [T; N]
             [T]
             bool
             char
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
             str
             u128
             u16
             u32
             u64
             u8
             usize
note: required by a bound in `zerocopy::util::macro_util::Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
  --> src/util/macro_util.rs:790:4
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
  --> $DIR/try_transmute_mut-src-not-intobytes.rs:21:40
   |
21 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromBytes` is not implemented for `Dst`
  --> $DIR/try_transmute_mut-src-not-intobytes.rs:17:1
   |
17 | struct Dst;
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(FromBytes)]` to `Dst`
   = help: the following other types implement trait `FromBytes`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
             (A, B, C, D, E, F, G, H, I)
             (A, B, C, D, E, F, G, H, I, J)
             (A, B, C, D, E, F, G, H, I, J, K)
             (A, B, C, D, E, F, G, H, I, J, K, L)
             (A, B, C, D, E, F, G, H, I, J, K, L, M)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y)
             (A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z)
             (A,)
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
             AtomicU32
             AtomicU64
             AtomicU8
             AtomicUsize
             Cell<T>
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             Isize<O>
             ManuallyDrop<T>
             MaybeUninit<T>
             Option<NonZero<i128>>
             Option<NonZero<i16>>
             Option<NonZero<i32>>
             Option<NonZero<i64>>
             Option<NonZero<i8>>
             Option<NonZero<isize>>
             Option<NonZero<u128>>
             Option<NonZero<u16>>
             Option<NonZero<u32>>
             Option<NonZero<u64>>
             Option<NonZero<u8>>
             Option<NonZero<usize>>
             PhantomData<T>
             ReadOnly<T>
             SliceDst<T, U>
             Src
             U128<O>
             U16<O>
             U32<O>
             U64<O>
             Unalign<T>
             UnsafeCell<T>
             Usize<O>
             Wrapping<T>
             [T; N]
             [T]
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
             u128
             u16
             u32
             u64
             u8
             usize
note: required by a bound in `zerocopy::util::macro_util::Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
  --> src/util/macro_util.rs:790:4
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Dst: IntoBytes` is not satisfied
  --> $DIR/try_transmute_mut-src-not-intobytes.rs:21:40
   |
21 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `IntoBytes` is not implemented for `Dst`
  --> $DIR/try_transmute_mut-src-not-intobytes.rs:17:1
   |
17 | struct Dst;
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `Dst`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
             AtomicU32
             AtomicU64
             AtomicU8
             AtomicUsize
             Cell<T>
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             Isize<O>
             ManuallyDrop<T>
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
             NonZero<isize>
             NonZero<u128>
             NonZero<u16>
             NonZero<u32>
             NonZero<u64>
             NonZero<u8>
             NonZero<usize>
             Option<NonZero<i128>>
             Option<NonZero<i16>>
             Option<NonZero<i32>>
             Option<NonZero<i64>>
             Option<NonZero<i8>>
             Option<NonZero<isize>>
             Option<NonZero<u128>>
             Option<NonZero<u16>>
             Option<NonZero<u32>>
             Option<NonZero<u64>>
             Option<NonZero<u8>>
             Option<NonZero<usize>>
             PhantomData<T>
             ReadOnly<T>
             SliceDst<T, U>
             U128<O>
             U16<O>
             U32<O>
             U64<O>
             Unalign<T>
             UnsafeCell<T>
             Usize<O>
             Wrapping<T>
             [T; N]
             [T]
             bool
             char
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
             str
             u128
             u16
             u32
             u64
             u8
             usize
note: required by a bound in `zerocopy::util::macro_util::Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
  --> src/util/macro_util.rs:790:4
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
